# core

./: .dockerignore  .env-ci  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.heroku  README.md  app.json  deploy-latest.sh  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-image.yml  gcr-cleaner.yml  geolite.yml  pre-commit.yml  pythonapp.yml  referers.yml
backend/: Dockerfile
backend/app/: alembic_helpers.py  commands.py  pyproject.toml  setup.cfg  shell.py  worker-start.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 00146b400b05_add_location_models.py  184d636be565_add_device_type_column.py  1fbed1fd8b9d_add_columns_for_time_values.py  218c88086610_remove_visitor_model.py  2496491e3b38_rename_item_to_domain.py  2b4a9f1ddb57_add_index_on_location.py  2dd6c012251f_create_optimised_index.py  2ff711f69dde_remove_ip_address_column.py  35c94a4f3c64_add_parsed_ua_column.py  4016d624841c_update_some_columns_use_numeric_types.py  42e19a87d094_add_stripe_related_fields.py  436ff473b7a6_create_migration_to_remove_event_.py  43a06710fa6d_update_trial_interval.py  44042835f7cc_initial_migration_again.py  4b234cc4431e_add_delete_at_column_for_soft_deletes.py  5ac5050aa186_add_salt_and_fingerprint_column.py  60d6fb1b4bda_remove_unused_fields_from_event_data.py  6ac3ac0be773_add_timestamps_to_models.py  70a1eff57522_add_stripe_related_fields.py  71d1ad04d072_add_stripe_customer_id.py  73e1037ccac3_add_metric_event_type_and_field.py  78062194679a_add_stripe_related_fields.py  78a6df7ee296_restore_missed_event_migration.py  812fd3fe30c1_add_columns_for_custom_events.py  92dd7090e30e_add_paid_referrer_type.py  93c03921e60f_add_page_view_id.py  9a684e63e7fa_add_timezone_column.py  b1adcb838150_remove_city_from_event_data.py  b3c8f054c636_add_location_models.py  b433ef4c48f1_add_referrer_columns.py  b719fb9b3588_add_stripe_customer_id.py  c1a9d32b3fe8_restore_timestamp_index.py  c453da3a51b0_add_columns_for_session_and_page_visit_.py  dd7f99de8057_add_some_models.py  de29c6b685cc_add_referrer_columns.py  e3844e1ac67a_remove_deprecated_columns.py  e55f4d11ba60_add_public_column_to_domain.py  e748644a1d21_item_domain_update_event.py  eb48b4fcc2ec_add_salt_and_fingerprint_column.py  ecb00a22b6f5_flatten_columns.py  (+3 more)
backend/app/app/: main.py  tests_pre_start.py  utils.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py  docs.py
backend/app/app/api/api_v1/endpoints/: analytics.py  billing.py  domains.py  events.py  login.py  users.py  utils.py
backend/app/app/core/: config.py  products.py
backend/app/app/crud/: __init__.py  base.py  crud_domain.py  crud_event.py  crud_user.py
backend/app/app/db/: base.py  base_class.py  session.py
backend/app/app/email-templates/compiled/: new_account.html  reset_password.html  test_email.html  trial-ending.html
backend/app/app/email-templates/src/: new_account.mjml  trial-ending.mjml
backend/app/app/models/: __init__.py  domain.py  event.py  location.py  parsed_ua.py  sqlalchemy_enum34.py  user.py  visitor.py
backend/app/app/schemas/: __init__.py  analytics.py  billing.py  domain.py  event.py  user.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/api/api_v1/: test_analytics.py  test_billing.py  test_domains.py  test_event.py  test_users.py
backend/app/app/tests/crud/: test_domain.py  test_event.py  test_user.py
backend/app/app/tests/crud/_utils/: test_stripe_helpers.py
backend/app/app/tests/crud/_utils/cassettes/: TestStripe.test_cancel_subscription.yaml  TestStripe.test_create_checkout_session.yaml  TestStripe.test_create_portal.yaml  TestStripe.test_create_stripe_customer_for_user.yaml  TestStripe.test_get_stripe_prices.yaml  TestStripe.test_get_stripe_subscriptions_for_user.yaml
backend/app/app/tests/schemas/: test_analytics.py
backend/app/app/tests/utils/: domain.py  event.py  user.py  utils.py
backend/app/app/utils/: __init__.py  db.py  email.py  general.py  geolocation.py  passwords.py  referer_parser.py  stripe_helpers.py
backend/app/assets/: index.html
backend/app/data/: referers.json  update-geojson.py  update-geonames.sh  update-referers.sh  update.sh  update_geonames.py
backend/app/scripts/: compile-email-templates.sh  fetch-db-ip.sh
backend/app/static/: script-src.js  script.js
client/: index.html  package.json  tsconfig.json
client/src/: globals.d.ts  index.ts  utils.ts
frontend/: .eslintrc.js  .pre-commit-config.yaml  .prettierrc.js  Dockerfile  README.md  generate_openapi_client.sh  nginx.conf  package.json  purgecss.conf.js  tsconfig.json  vue.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.vue  api.ts  env.ts  main.ts  registerServiceWorker.ts  router.ts  sentry.ts  shims-vue.d.ts  utils.ts
frontend/src/components/: AnalyticsContainer.vue  ChoroplethMap.vue  DeleteItem.vue  NotificationsManager.vue  UploadButton.vue
frontend/src/interfaces/: index.ts
frontend/tests/: setup.js
scripts/: deploy.sh  test-local.sh  test.sh
(+52 files in other folders)
