[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Gaganpreet Arora <me@gaganpreet.in>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.13.4"
fastapi = "^0.63.0"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.25.1"
celery = "^5.0.5"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^7.0.0"
pydantic = "^1.8"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^20.0.4"
jinja2 = "^2.11.3"
psycopg2-binary = "^2.8.5"
alembic = "^1.5.6"
sqlalchemy = "^1.3.23"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
sqlalchemy-enum34 = "^1.0.1"
furl = "^2.1.0"
user-agents = "^2.2.0"
geoip2 = "^4.1.0"
arrow = "^1.0.2"
pytz = "2019.3"

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.7.0"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^6.2.2"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^2.11.1"
pylint = "^2.7.2"
ipython = "^7.21.0"
coverage = {extras = ["toml"], version = "^5.5"}
hypothesis = "^6.4.3"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 80

[tool.pylint.MASTER]
init-hook='import sys; sys.path.append("backend/app/")'

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "no-name-in-module", # Already done by mypy
    "invalid-name",
    "unsubscriptable-object", # https://github.com/PyCQA/pylint/issues/3882
    "too-few-public-methods",
    "missing-class-docstring",
    "missing-function-docstring"
]
