[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Gaganpreet Arora <me@gaganpreet.in>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.13.4"
fastapi = "^0.63.0"
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.25.1"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^8.2.2"
pydantic = "^1.8"
emails = "^0.6"
gunicorn = "^20.1.0"
jinja2 = "^2.11.3"
psycopg2-binary = "^2.8.5"
alembic = "^1.7.7"
sqlalchemy = "^1.4.39"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
furl = "^2.1.0"
user-agents = "^2.2.0"
geoip2 = "^4.5.0"
arrow = "^1.0.3"
pytz = "2019.3"
fastapi-utils = "^0.2.1"
click = "7.*"
sentry-sdk = "^1.1.0"
stripe = "^2.60.0"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^21.12b0"
isort = "^5.7.0"
autoflake = "^1.3.1"
flake8 = "^3.9.0"
pytest = "^6.2.5"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^2.11.1"
pylint = "^2.13.9"
ipython = "^7.32.0"
coverage = {extras = ["toml"], version = "^5.5"}
hypothesis = "^6.50.1"
pytest-vcr = "^1.0.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 85

[tool.pylint.MASTER]
init-hook='import sys; sys.path.append("backend/app/")'

[tool.pylint.'MESSAGES CONTROL']
disable = [
    "no-name-in-module", # Already done by mypy
    "invalid-name",
    "unsubscriptable-object", # https://github.com/PyCQA/pylint/issues/3882
    "too-few-public-methods",
    "missing-class-docstring",
    "missing-function-docstring"
]
